tests/parser/validinput/scoping.idp
namespace Root{
	namespace A{
		vocabulary vocA{
			C
		}
		
		vocabulary vocA2{
			C
		}
	
		theory theoryA: vocA{
			C.
		}
	
		structure structA: vocA{
		}
	}
	
	namespace B{
		using namespace A
//		using vocabulary vocA
		
		theory theoryB: vocA{
			C.
		}

		procedure main(){
			mx(A::theoryA, Root::A::structA)
			print(C)
		}
	}
}

procedure main(){
	return 1
}

procedure main2(){
	Root::B::main()
}
